# witchdraft

./: .gitignore  IMPLEMENTATION_PROMPTS.md  PLACEHOLDER_FEATURES.md  README.md  current_draft.md  mastorrefactor.md  pyproject.toml
Design Space/: index.html  package-lock.json  package.json  tsconfig.json
Design Space/src/: App.tsx  index.css
Design Space/src/editor/components/: AssetLibrary.tsx  BrandModal.tsx  CanvasSettingsPopover.tsx  CanvasStage.tsx  EditorShell.tsx  ExportModal.tsx  (+10 more)
Design Space/src/types/: fabric-extensions.d.ts
WitchDraft/: PROJECT_OVERVIEW.md  WitchDraft_Layout_Spec.md  WitchDraft_Philosophy.md  WitchDraft_Spec.md  WitchDraft_Spec_Addendum.md  WitchDraft_UI_Polish.md  hearth.py  index.json  vault.db
WitchDraft/meta/: archetypes.json
WitchDraft/scripts/: build_index.py
WitchDraft/src/witchdraft/: app.py  export.py  palette_theme_db.py  palette_theme_schema.sql  shadow_bible.py
WitchDraft/src/witchdraft.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
WitchDraft/tests/: test_io_utils.py  test_split_scenes.py
WitchDraft/ui_refinements/: cozy_ui_implementation.txt
chapters/: 000--sanctuary.md
meta/: moods.json  themes.json
palettes/: designspace.json
src/witchdraft/: __init__.py  app.py  constellation_enhanced.py  design_space_bridge.py  launcher.py
src/witchdraft/core/: __init__.py  io_utils.py  scene_utils.py
src/witchdraft/db/: __init__.py  schema.py
src/witchdraft/editor/: annotation_manager.py
src/witchdraft/services/: nlp_service.py
ui_refinements/: cozy_ui_prompt.txt
(+23 files in other folders)
