[project]
name = "witchdraft"
version = "0.1.0"
description = "Local-first writing CLI built with Textual."
requires-python = ">=3.10"
dependencies = ["PyQt6>=6.5.0"]

[project.scripts]
witchdraft = "witchdraft.launcher:main"

[project.optional-dependencies]
spacy = ["spacy>=3.6.0"]
pdf = ["reportlab>=4.0.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
